[gd_scene load_steps=29 format=2]

[ext_resource path="res://tilesets/house/rug/rug1.tres" type="TileSet" id=1]
[ext_resource path="res://tilesets/house/house1.tres" type="TileSet" id=2]
[ext_resource path="res://characters/player/Player.gd" type="Script" id=3]
[ext_resource path="res://objects/table/Table.tscn" type="PackedScene" id=4]
[ext_resource path="res://characters/player/light_mask2d.png" type="Texture" id=5]
[ext_resource path="res://levels/interfaces/LightMask2D.tscn" type="PackedScene" id=6]
[ext_resource path="res://levels/interfaces/Light-Effects.tscn" type="PackedScene" id=7]
[ext_resource path="res://objects/table/Table.gd" type="Script" id=8]
[ext_resource path="res://objects/door/Door.gd" type="Script" id=9]
[ext_resource path="res://gui/inventory/InventoryGUI.gd" type="Script" id=10]
[ext_resource path="res://objects/StaticObject.gd" type="Script" id=11]
[ext_resource path="res://levels/LightEffects.gd" type="Script" id=12]
[ext_resource path="res://characters/player/player.tscn" type="PackedScene" id=13]
[ext_resource path="res://tilesets/Shadow.tscn" type="PackedScene" id=14]
[ext_resource path="res://objects/door/Door.tscn" type="PackedScene" id=15]
[ext_resource path="res://gui/inventory/Inventory.tscn" type="PackedScene" id=16]
[ext_resource path="res://objects/bookshelf/Bookshelf.tscn" type="PackedScene" id=17]
[ext_resource path="res://tilesets/shadows.tres" type="TileSet" id=18]
[ext_resource path="res://tilesets/house/ledge/ledge.tres" type="TileSet" id=19]
[ext_resource path="res://objects/paintings/painting-3.png" type="Texture" id=20]
[ext_resource path="res://objects/paintings/painting-2.png" type="Texture" id=21]
[ext_resource path="res://objects/paintings/painting-1.png" type="Texture" id=22]
[ext_resource path="res://objects/desk/desk.png" type="Texture" id=23]
[ext_resource path="res://objects/chair2.png" type="Texture" id=24]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24.038, 16 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 23.962, 4 )

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 3
light_mode = 1

[node name="level_name" type="Node2D"]
__meta__ = {
"_edit_lock_": true
}

[node name="Player" type="KinematicBody2D" parent="." groups=[
"save",
] instance=ExtResource( 13 )]
position = Vector2( 120.962, 208 )
z_index = 3
collision_mask = 12
script = ExtResource( 3 )
deaccel = 0.4
speed = 20.0
sprint_speed = 48.0
stagger_speed = 16.0
walk_step_interval = 0.7
sprint_step_interval = 0.5
look_dir = Vector2( 0, -1 )

[node name="Shadow" type="TileMap" parent="." instance=ExtResource( 14 )]
modulate = Color( 1, 1, 1, 0.392157 )
tile_set = ExtResource( 18 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 262146, 2, 0, 327682, 2, 0 )

[node name="painting-3" type="Sprite" parent="."]
position = Vector2( 119.962, 72 )
texture = ExtResource( 20 )

[node name="HouseF1" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65536, 6, 0, 65537, 6, 0, 65538, 6, 0, 65539, 6, 0, 65540, 6, 0, 65541, 6, 0, 65542, 6, 0, 65543, 6, 0, 65544, 6, 0, 65545, 6, 0, 65546, 6, 0, 65547, 6, 0, 65548, 6, 0, 65549, 6, 0, 65550, 6, 0, 131072, 6, 0, 131073, 9, 0, 131074, 14, 0, 131075, 14, 0, 131076, 14, 0, 131077, 14, 0, 131078, 14, 0, 131079, 14, 0, 131080, 14, 0, 131081, 14, 0, 131082, 14, 0, 131083, 14, 0, 131084, 14, 0, 131085, 2, 0, 131086, 6, 0, 196608, 6, 0, 196609, 5, 0, 196610, 15, 0, 196611, 15, 0, 196612, 15, 0, 196613, 15, 0, 196614, 15, 0, 196615, 15, 0, 196616, 15, 0, 196617, 15, 0, 196618, 15, 0, 196619, 15, 0, 196620, 15, 0, 196621, 3, 0, 196622, 6, 0, 262144, 6, 0, 262145, 5, 0, 262146, 18, 0, 262147, 18, 0, 262148, 18, 0, 262149, 18, 0, 262150, 18, 0, 262151, 18, 0, 262152, 18, 0, 262153, 18, 0, 262154, 18, 0, 262155, 18, 0, 262156, 18, 0, 262157, 3, 0, 262158, 6, 0, 327680, 6, 0, 327681, 5, 0, 327682, 17, 0, 327683, 17, 0, 327684, 17, 0, 327685, 17, 0, 327686, 17, 0, 327687, 17, 0, 327688, 17, 0, 327689, 17, 0, 327690, 17, 0, 327691, 17, 0, 327692, 17, 0, 327693, 3, 0, 327694, 6, 0, 393216, 6, 0, 393217, 5, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 3, 0, 393230, 6, 0, 458752, 6, 0, 458753, 5, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 3, 0, 458766, 6, 0, 524288, 6, 0, 524289, 5, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 3, 0, 524302, 6, 0, 589824, 6, 0, 589825, 5, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 3, 0, 589838, 6, 0, 655360, 6, 0, 655361, 5, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 3, 0, 655374, 6, 0, 720896, 6, 0, 720897, 5, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 3, 0, 720910, 6, 0, 786432, 6, 0, 786433, 8, 0, 786434, 4, 0, 786435, 4, 0, 786436, 4, 0, 786437, 4, 0, 786438, 13, 0, 786439, 1, 0, 786440, 10, 0, 786441, 4, 0, 786442, 4, 0, 786443, 4, 0, 786444, 4, 0, 786445, 7, 0, 786446, 6, 0, 851968, 6, 0, 851969, 6, 0, 851970, 6, 0, 851971, 6, 0, 851972, 6, 0, 851973, 6, 0, 851974, 8, 0, 851975, 4, 0, 851976, 7, 0, 851977, 6, 0, 851978, 6, 0, 851979, 6, 0, 851980, 6, 0, 851981, 6, 0, 851982, 6, 0, 917509, 6, 0, 917510, 6, 0, 917511, 6, 0, 917512, 6, 0, 917513, 6, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="HouseF2" type="TileMap" parent="."]
position = Vector2( 128, 160 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Rug" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 458756, 6, 0, 458757, 2, 0, 458758, 2, 0, 458759, 2, 0, 458760, 2, 0, 458761, 2, 0, 458762, 7, 0, 524292, 5, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 3, 0, 589828, 5, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 3, 0, 655364, 9, 0, 655365, 4, 0, 655366, 4, 0, 655367, 4, 0, 655368, 4, 0, 655369, 4, 0, 655370, 8, 0 )

[node name="Ledge" type="TileMap" parent="."]
position = Vector2( 0, -16 )
z_index = 3
tile_set = ExtResource( 19 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="CanvasModulate" type="CanvasModulate" parent="." instance=ExtResource( 7 )]
color = Color( 0.05, 0.05, 0.05, 1 )
script = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="Chair" type="StaticBody2D" parent="."]
position = Vector2( 114.162, 160 )
rotation = -1.5708
script = ExtResource( 11 )
dialogue = null

[node name="CollisionBox" type="CollisionShape2D" parent="Chair"]
position = Vector2( 8, 4.677 )
rotation = 3.14159
scale = Vector2( 1, 1.24 )
shape = SubResource( 2 )
one_way_collision_margin = 0.0

[node name="Texture" type="Sprite" parent="Chair"]
texture = ExtResource( 24 )

[node name="InteractionArea" type="Area2D" parent="Chair"]
visible = false
collision_layer = 2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="InteractionBox" type="CollisionShape2D" parent="Chair/InteractionArea"]
modulate = Color( 0.854902, 0.835294, 0.509804, 1 )
shape = SubResource( 3 )

[node name="Object" type="StaticBody2D" parent="."]
position = Vector2( 119.962, 144 )
script = ExtResource( 11 )
dialogue = null

[node name="CollisionBox" type="CollisionShape2D" parent="Object"]
position = Vector2( 0, -8.00003 )
rotation = 3.14159
shape = SubResource( 4 )
one_way_collision_margin = 0.0

[node name="Texture" type="Sprite" parent="Object"]
texture = ExtResource( 23 )

[node name="InteractionArea" type="Area2D" parent="Object"]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="InteractionBox" type="CollisionShape2D" parent="Object/InteractionArea"]
modulate = Color( 0.854902, 0.835294, 0.509804, 1 )
shape = SubResource( 3 )

[node name="bookshelf" type="StaticBody2D" parent="." instance=ExtResource( 17 )]
position = Vector2( 55.6237, 80 )
script = ExtResource( 11 )
dialogue = null

[node name="bookshelf2" type="StaticBody2D" parent="." instance=ExtResource( 17 )]
position = Vector2( 86.7644, 80 )
script = ExtResource( 11 )
dialogue = null

[node name="bookshelf3" type="StaticBody2D" parent="." instance=ExtResource( 17 )]
position = Vector2( 136, 80 )
script = ExtResource( 11 )
dialogue = null

[node name="Table" type="StaticBody2D" parent="." groups=[
"save",
] instance=ExtResource( 4 )]
position = Vector2( 170.962, 96 )
collision_layer = 3
script = ExtResource( 8 )
dialogue = null

[node name="painting-2" type="Sprite" parent="."]
position = Vector2( 177, 64 )
texture = ExtResource( 21 )

[node name="painting-1" type="Sprite" parent="."]
position = Vector2( 192, 72 )
texture = ExtResource( 22 )

[node name="Door" type="Area2D" parent="." instance=ExtResource( 15 )]
visible = false
position = Vector2( 119.962, 208 )
script = ExtResource( 9 )
scene_name = "1F_west_main_hall"
locked = false
locked_dialogue = null
unlocked_text = ""
key_name = ""
inventory_gui_path = NodePath("../CanvasLayer/InventoryGUI")
player_path = NodePath("../Player")
required_look_dir = Vector2( 0, 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LightMask2D" type="Sprite" parent="CanvasLayer" instance=ExtResource( 6 )]
material = SubResource( 1 )
position = Vector2( 128, 96 )
scale = Vector2( 1, 1.25 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="InventoryGUI" type="Control" parent="CanvasLayer" instance=ExtResource( 16 )]
visible = false
margin_left = 16.0
margin_top = 16.0
margin_right = 128.0
margin_bottom = 136.0
rect_pivot_offset = Vector2( 40.5, 60 )
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}
player_path = NodePath("")

[connection signal="body_entered" from="Chair/InteractionArea" to="Chair" method="_on_InteractionArea_body_entered"]
[connection signal="body_exited" from="Chair/InteractionArea" to="Chair" method="_on_InteractionArea_body_exited"]
[connection signal="body_entered" from="Object/InteractionArea" to="Object" method="_on_InteractionArea_body_entered"]
[connection signal="body_exited" from="Object/InteractionArea" to="Object" method="_on_InteractionArea_body_exited"]
[connection signal="body_entered" from="Door" to="Door" method="_on_Door_body_entered"]
[connection signal="body_exited" from="Door" to="Door" method="_on_Door_body_exited"]
